# engine

./: .gitignore  Arundos.cpp  Arundos.h.in  Arundos.hpp.in  CMakeLists.txt  README.md  first_app.cpp  first_app.hpp  main.cpp
Libraries/easyloggingpp/: CMakeLists.txt
Libraries/stb/: CMakeLists.txt
Libraries/tinyobjectloader/: CMakeLists.txt
archive/legacy_objects/: ae_game_object.hpp
archive/legacy_render_systems/: ae_frame_info.hpp  ae_rs_point_light.cpp  ae_rs_point_light.hpp  ae_rs_simple.cpp  ae_rs_simple.hpp
assets/audio/: CMakeLists.txt
assets/materials/: CMakeLists.txt
assets/models/: CMakeLists.txt  generate_escher_solid.py  generate_truncated_octahedron_solid.py
assets/ui_textures/: CMakeLists.txt
assets_NOTPRODUCTION/audio/: CMakeLists.txt
assets_NOTPRODUCTION/materials/: CMakeLists.txt
assets_NOTPRODUCTION/models/: CMakeLists.txt
assets_NOTPRODUCTION/ui_textures/: CMakeLists.txt
documentation/: Accessibility.md  BrainDump.md  Lore.md  Music.md  World-Design.md
documentation/Concept-Art/: Leaf-Enemies.md  Nature-Symbols.md
documentation/Game-Engine/: ECS.md  Graphics.md
documentation/Game-Engine/ECS/: Component.md  Entity.md
documentation/Lore/: Character_Template.md
doxygen/: arundos_doxygen_cfg
engine/: CMakeLists.txt  ae_engine_constants.hpp
engine/ecs/: CMakeLists.txt  ae_component_base.cpp  ae_component_base.hpp  ae_component_manager.cpp  ae_ecs_constants.hpp  ae_ecs_include.hpp  ae_entity_manager.cpp  ae_entity_manager.hpp  ae_system_manager.cpp
engine/graphics/: CMakeLists.txt  ae_2d_model.hpp  ae_3d_material_layer_base.hpp  ae_3d_material_layer_type.hpp  ae_3d_model.cpp  ae_3d_model.hpp  ae_buffer.hpp  ae_compute_pipeline.hpp  ae_descriptors.hpp  ae_device.hpp  ae_graphics.cpp  ae_graphics_pipeline.hpp  ae_image.cpp  ae_image.hpp  ae_renderer.hpp  ae_samplers.cpp  ae_samplers.hpp  ae_swap_chain.hpp  ae_utils.hpp  ae_window.cpp  ae_window.hpp
engine/graphics/shaders/: aabb.frag  (+14 more)
engine/memory/: CMakeLists.txt  ae_allocator_base.cpp  ae_allocator_stl_adapter.hpp  ae_de_stack_allocator.hpp  ae_memory_manager.cpp  ae_memory_manager.hpp  ae_pool_allocator.cpp  ae_pool_allocator.hpp
engine/resource_manager/: CMakeLists.txt  ae_resource_manager.cpp  ae_resource_manager.hpp
engines/ecs/: CMakeLists.txt  ae_component.cpp  ae_component.hpp  ae_componentManager.cpp  ae_componentManager.hpp  ae_component_base.cpp  ae_component_base.hpp  ae_component_manager.cpp  ae_component_manager.hpp  ae_ecs.hpp  ae_ecs_constants.hpp  ae_entity.cpp  ae_entity.hpp  ae_entity_manager.cpp  ae_entity_manager.hpp  ae_id_counters.hpp  ae_system.hpp  ae_system_base.cpp  ae_system_base.hpp  ae_system_manager.cpp  ae_system_manager.hpp
engines/graphics/: CMakeLists.txt  ae_2d_model.cpp  ae_2d_model.hpp  ae_3d_material_layer_base.cpp  ae_3d_material_layer_base.hpp  ae_3d_material_layer_type.hpp  ae_3d_model.cpp  ae_3d_model.hpp  ae_buffer.cpp  ae_buffer.hpp  ae_camera.cpp  ae_camera.hpp  ae_compute_pipeline.cpp  ae_compute_pipeline.hpp  ae_descriptors.cpp  ae_descriptors.hpp  ae_device.cpp  ae_device.hpp  ae_graphics_constants.hpp  ae_graphics_pipeline.cpp  ae_graphics_pipeline.hpp  ae_image.cpp  ae_image.hpp  ae_material3d.cpp  ae_material3d.hpp  ae_material3d_base.cpp  ae_material3d_base.hpp  ae_material3d_layer.hpp  ae_material3d_layer_base.cpp  ae_material3d_layer_base.hpp  ae_model.cpp  ae_model.hpp  ae_pipeline.cpp  ae_pipeline.hpp  ae_renderer.cpp  ae_renderer.hpp  ae_samplers.cpp  ae_samplers.hpp  ae_swap_chain.cpp  ae_swap_chain.hpp  (+3 more)
engines/memory/: CMakeLists.txt  ae_allocator.hpp  ae_allocator_base.cpp  ae_allocator_base.hpp  ae_allocator_stl_adapter.hpp  ae_de_stack_allocator.cpp  ae_de_stack_allocator.hpp  ae_free_linked_list_allocator.cpp  ae_free_linked_list_allocator.hpp  ae_memory_constants.hpp  ae_memory_manager.cpp  ae_memory_manager.hpp  ae_pool_allocator.cpp  ae_pool_allocator.hpp  ae_stack_allocator.cpp  ae_stack_allocator.hpp
game_code/: CMakeLists.txt  game_components.hpp  game_constants.hpp  game_materials.hpp  game_systems.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp
game_code/components/: CMakeLists.txt  camera_component.cpp  camera_component.hpp  game_components.hpp  graphics_update_flags_component.hpp  modelComponent.hpp  model_2d_component.hpp  model_component.hpp  player_controlled_component.hpp  point_light_component.hpp  positionComponent.hpp  position_component.hpp  testComponentStuff.hpp  ubo_data_component.hpp  ubo_data_flags_component.hpp  ui_component.hpp  world_chunk_component.hpp  world_position_component.hpp  world_voxel_component.hpp
game_code/entities/: CMakeLists.txt  camera_entity.cpp  camera_entity.hpp  game_object_entity.cpp  game_object_entity.hpp  objectEntity.cpp  objectEntity.h  objectEntity.hpp  point_light_entity.cpp  point_light_entity.hpp  testComponent.hpp  two_d_entity.cpp  two_d_entity.hpp  world_chunk_entity.cpp  world_chunk_entity.hpp  world_voxel_entity.cpp  world_voxel_entity.hpp
game_code/objects/: CMakeLists.txt  ae_game_object.cpp  ae_game_object.hpp
game_code/render_systems/: CMakeLists.txt  ae_frame_info.hpp  ae_rs_point_light.cpp  ae_rs_point_light.hpp  ae_rs_simple.cpp  ae_rs_simple.hpp
game_code/systems/: CMakeLists.txt  camera_update_system.cpp  camera_update_system.hpp  chunk_management_system.hpp  cycle_point_lights_system.cpp  cycle_point_lights_system.hpp  game_systems.hpp  player_input_system.cpp  player_input_system.hpp  renderer_start_pass_system.cpp  renderer_start_pass_system.hpp  renderer_system.cpp  renderer_system.hpp  simple_render_system.cpp  simple_render_system.hpp  timing_system.cpp  timing_system.hpp  update_ubo_system.cpp  update_ubo_system.hpp
game_objects/: ae_game_object.hpp
models/: CMakeLists.txt
templates/: template.cpp  template.hpp
test_code_NOTPRODUCTION/: CMakeLists.txt  Test_entity-create-destroy_system.cpp  Test_entity-create-destroy_system.hpp  test_memory_allocators.hpp  test_memory_pointer_functions.hpp  test_rotate_object_component.hpp  test_rotate_object_system.cpp  test_rotate_object_system.hpp
(+78 files in other folders)
